--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "devDependencies": {
         "featureJS": "git+https://github.com/tabris87/featureJS.git",
+        "featurecli-commons": "git+https://github.com/tabris87/featureCLI-commons.git#master",
         "jest": "^25.1.0",
         "jest-html-reporters": "^1.2.1"
     },
@@ -29,12 +30,15 @@
         ],
         "reporters": [
             "default",
-            ["jest-html-reporters", {
-                "filename": "./test/latestTests.html",
-                "expand": false,
-                "pageTitle": "featureJS-plugin-JSON",
-                "hideIcon": true
-            }]
+            [
+                "jest-html-reporters",
+                {
+                    "filename": "./test/latestTests.html",
+                    "expand": false,
+                    "pageTitle": "featureJS-plugin-JSON",
+                    "hideIcon": true
+                }
+            ]
         ]
     }
 }
