Fixed package.json and README.md
Signed-off-by: Adrian Marten <Adrian.Marten@msg.group>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "featurejs-plugin-json",
+    "name": "smithery-plugin-json",
     "version": "0.1.0",
     "author": "Adrian Marten",
     "repository": {
